--- a/.drone.yml
+++ b/.drone.yml
@@ -4,7 +4,7 @@ pipeline:
     environment:
       - REL=v3.5
     commands:
-      - apk add --no-cache grep curl
+      - apk add --no-cache grep curl xz
       - ./mkimage-alpine.sh
 
   docker:
